<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">

    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:orientation="horizontal">
        	<ImageView   
        		android:layout_height="fill_parent"
        		android:layout_width="10dp"  
        		android:contentDescription="@string/app_name"
        		android:background="@color/blue"   />
        	<TextView 
           	 	android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:layout_marginLeft="5dp"
           	 	android:layout_marginStart="5dp"
            	android:textSize="30sp"
            	android:gravity="center"
            	android:text="@string/brief"/>
    	</LinearLayout>
    
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="8dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:orientation="vertical"
        	android:background="@color/white">
        	<TextView 
            	android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
           	 	android:layout_marginLeft="2dp"
           	 	android:layout_marginStart="2dp"
            	android:textSize="22sp"
            	android:gravity="center"
            	android:text="@string/location"/>
        	<ImageView   
        		android:layout_width="fill_parent"  
        		android:layout_height="1dp"  
        		android:contentDescription="@string/app_name"
        		android:background="@color/antiquewhite"  />
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
            	android:textSize="16sp"
            	android:text="@string/location_detail"/>
    	</LinearLayout>
    
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:orientation="vertical"
        	android:background="@color/white">
       	 	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="2dp"
           	 	android:layout_marginStart="2dp"
            	android:textSize="22sp"
            	android:gravity="start"
            	android:text="@string/time"/>
        	<ImageView   
        		android:layout_width="fill_parent"  
        		android:layout_height="1dp"  
        		android:contentDescription="@string/app_name"
        		android:background="@color/antiquewhite"  />
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
            	android:textSize="16sp"
            	android:text="@string/time_detail"/>
    	</LinearLayout>
    
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:orientation="vertical"
        	android:background="@color/white">
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="2dp"
           	 	android:layout_marginStart="2dp"
            	android:textSize="22sp"
            	android:gravity="start"
           	 	android:text="@string/play_time"/>
        	<ImageView   
        		android:layout_width="fill_parent"  
        		android:layout_height="1dp"  
        		android:contentDescription="@string/app_name"
        		android:background="@color/antiquewhite"  />
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
            	android:textSize="16sp"
            	android:text="@string/play_time_detail"/>
    	</LinearLayout>
    
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:orientation="vertical"
        	android:background="@color/white">
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="2dp"
           	 	android:layout_marginStart="2dp"
            	android:textSize="22sp"
            	android:gravity="start"
            	android:text="@string/clothes"/>
        	<ImageView   
        		android:layout_width="fill_parent"  
        		android:layout_height="1dp"  
        		android:contentDescription="@string/app_name"
        		android:background="@color/antiquewhite"  />
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
            	android:textSize="16sp"
            	android:text="@string/clothes_detail"/>
    	</LinearLayout>
    	
    	<LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:orientation="vertical"
        	android:background="@color/white">
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="2dp"
           	 	android:layout_marginStart="2dp"
            	android:textSize="22sp"
            	android:gravity="start"
            	android:text="@string/introduce"/>
        	<ImageView   
        		android:layout_width="fill_parent"  
        		android:layout_height="1dp"  
        		android:contentDescription="@string/app_name"
        		android:background="@color/antiquewhite"  />
        	<TextView 
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
            	android:textSize="16sp"
            	android:text="@string/introduce_detail"/>
    	</LinearLayout>

	</LinearLayout>

</ScrollView>
