<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        
        <TextView 
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="#FFF"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SingriLa"
            android:layout_below="@id/t"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:textSize="40sp"
            android:textColor="#FFF"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/cloudy_icon"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp" 
                android:text="10℃"
                android:textColor="#FFF"/>
        </LinearLayout>

    </RelativeLayout>

    <GridView 
        android:id="@+id/first_page"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:verticalSpacing="20dp"
        android:numColumns="2"
        android:gravity="center">
    </GridView>

</LinearLayout>
